<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_qrcode_result"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="88ZZ机柜"
        android:textSize="40sp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_qrcode_time"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="2016年3月15日 第一次巡检"
        android:textSize="14sp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabinet_anomaly" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabinet_detail" />
        <EditText
            android:layout_marginLeft="5dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="left|top"
            android:background="@drawable/etml_selector"
            android:textSize="12sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_qrcode_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btn_qrcode_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>
