<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/ibtn_return"
            android:layout_width="40dp"
            android:layout_height="25dp"

            android:background="@drawable/btn_return" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/user"/>
        <TextView
            android:id="@+id/tv_index_user"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="username"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_index_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_tody"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_patrol"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:text="@string/index_btn_patrol" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/tv_index_patrol_number"
                style="@style/index_count_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_index_patrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_index_portal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_index_anomaly_number"
                style="@style/index_count_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_index_anomaly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_index_anomaly" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="50dp">

            <TextView
                android:id="@+id/tv_index_photo_number"
                style="@style/index_count_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_index_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_index_photo" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_index_line"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ListView
            android:id="@+id/lv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>

</LinearLayout>